force-app/main/default/objects/xAL_PostalCode__mdt/xAL_PostalCode__mdt.object-meta.xml
<CustomObject>
    <label>xAL PostalCode</label>
    <pluralLabel>xAL PostalCodes</pluralLabel>
</CustomObject>