force-app/main/default/objects/xAL_PostalCode__mdt/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <label>Number</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>