force-app/main/default/objects/xAL_PostalCode__mdt/fields/xAL_Locality__c.field-meta.xml
<CustomField>
    <fullName>xAL_Locality__c</fullName>
    <label>xAL Locality</label>
    <referenceTo>xAL_Locality__mdt</referenceTo>
    <relationshipLabel>xAL PostalCodes</relationshipLabel>
    <relationshipName>xAL_PostalCodes</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>